# TUM-autonomous-systems-project-group-16

./: .gitattributes  .gitignore  README.md  base iliasu07 iliasu07.txt  drone_waypoint_navigation.py  frames_2026-02-24_17.54.19.gv  frames_2026-02-24_19.37.17.gv  install_dependencies.sh  quick_start.sh  start_rviz2.sh  visualize_map.py
documents/: main.tex  sample.bib
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/basic_waypoint_pkg/include/basic_waypoint_pkg/: planner.hpp
ros2_ws/install/basic_waypoint_pkg/share/basic_waypoint_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/controller_pkg/lib/controller_pkg/: controller_node
ros2_ws/install/controller_pkg/share/controller_pkg/: local_setup.sh  package.sh  package.xml
ros2_ws/install/mapping/share/mapping/: package.sh  package.xml
ros2_ws/install/mapping/share/mapping/cmake/: mappingConfig.cmake
ros2_ws/install/mapping/share/mapping/config/: mapping.yaml
ros2_ws/install/mapping/share/mapping/launch/: mapping.launch.py
ros2_ws/install/perception_pipeline/share/perception_pipeline/: local_setup.sh  package.sh  package.xml
ros2_ws/install/perception_pipeline/share/perception_pipeline/cmake/: perception_pipelineConfig.cmake
ros2_ws/install/perception_pipeline/share/perception_pipeline/launch/: perception_pipeline.launch.py
ros2_ws/install/perception_pkg/share/perception_pkg/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/perception_pkg/share/perception_pkg/launch/: lantern_detector.launch.py
ros2_ws/install/trajectory_planner/share/trajectory_planner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/trajectory_planner/share/trajectory_planner/cmake/: trajectory_plannerConfig.cmake
ros2_ws/install/trajectory_planner/share/trajectory_planner/launch/: trajectory_planner.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/controller_pkg/config/: controller_params.yaml
ros2_ws/src/detection/: CMakeLists.txt
ros2_ws/src/detection/include/detection/: lantern_detector_node.hpp
ros2_ws/src/detection/launch/: lantern_detector.launch.py
ros2_ws/src/detection/src/: lantern_detector_main.cpp  lantern_detector_node.cpp
ros2_ws/src/mapping/: CMakeLists.txt  package.xml
ros2_ws/src/mapping/config/: mapping.yaml
ros2_ws/src/mapping/include/mapping/: global_map_publisher_node.hpp  voxel_grid_mapper_node.hpp
ros2_ws/src/mapping/launch/: mapping.launch.py
ros2_ws/src/mapping/src/: global_map_publisher_node.cpp  voxel_grid_mapper_node.cpp
ros2_ws/src/path_planner/: CMakeLists.txt  package.xml
ros2_ws/src/path_planner/config/: path_planner.yaml
ros2_ws/src/path_planner/include/path_planner/: path_planner_node.hpp
ros2_ws/src/path_planner/launch/: path_planner.launch.py
ros2_ws/src/path_planner/src/: path_planner_node.cpp
ros2_ws/src/perception/: CMakeLists.txt  package.xml
ros2_ws/src/perception/config/: perception.yaml
ros2_ws/src/perception/include/perception/: depth_to_pointcloud_node.hpp  pointcloud_to_octomap_node.hpp
ros2_ws/src/perception/launch/: depth_to_pointcloud.launch.py  perception.launch.py  pointcloud_to_octomap.launch.py
ros2_ws/src/perception/src/: depth_to_pointcloud_main.cpp  depth_to_pointcloud_node.cpp  light_detection.cpp  pointcloud_to_octomap_main.cpp  pointcloud_to_octomap_node.cpp
ros2_ws/src/perception_pipeline/: CMakeLists.txt
ros2_ws/src/perception_pipeline/config/: perception_pipeline.yaml
ros2_ws/src/perception_pipeline/include/perception_pipeline/: depth_to_pointcloud_node.hpp  semantic_camera_subscriber_node.hpp
ros2_ws/src/perception_pipeline/launch/: perception_pipeline.launch.py
ros2_ws/src/perception_pipeline/src/: depth_to_pointcloud_node.cpp  object_detection_node.cpp  semantic_camera_subscriber_node.cpp
ros2_ws/src/perception_pkg/: CMakeLists.txt
ros2_ws/src/perception_pkg/launch/: octomap.launch.py  perception.launch.py
ros2_ws/src/perception_pkg/perception_pkg/: depth_to_pointcloud.py.bak
ros2_ws/src/perception_pkg/src/: depth_to_pointcloud.cpp  lantern_detector.cpp  pointcloud_to_octomap.cpp
ros2_ws/src/quadrotor_controller/: CMakeLists.txt  package.xml
ros2_ws/src/quadrotor_controller/config/: controller.yaml
ros2_ws/src/quadrotor_controller/include/quadrotor_controller/: controller_interface_node.hpp
ros2_ws/src/quadrotor_controller/launch/: quadrotor_controller.launch.py
ros2_ws/src/quadrotor_controller/src/: controller_interface_node.cpp
ros2_ws/src/simulation/: CMakeLists.txt
ros2_ws/src/simulation/config/: subterrain.rviz
ros2_ws/src/simulation/launch/: mission.launch.py  simulation.launch.py  subterrain_challenge.launch.py  unity_sim.launch.py
ros2_ws/src/simulation/src/: true_state_parser.h  unity_ros.cpp
ros2_ws/src/simulation_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/simulation_bridge/config/: simulation_bridge.yaml
ros2_ws/src/simulation_bridge/launch/: simulation_bridge.launch.py  subterrain_challenge.launch.py
ros2_ws/src/state_machine/: CMakeLists.txt  package.xml
ros2_ws/src/state_machine/config/: state_machine.yaml
ros2_ws/src/state_machine/include/state_machine/: mission_state_machine_node.hpp
ros2_ws/src/state_machine/launch/: state_machine.launch.py
ros2_ws/src/state_machine/src/: mission_state_machine_node.cpp
ros2_ws/src/trajectory_planner/: CMakeLists.txt
ros2_ws/src/trajectory_planner/config/: trajectory_planner.yaml
ros2_ws/src/trajectory_planner/include/trajectory_planner/: trajectory_generator_node.hpp
ros2_ws/src/trajectory_planner/launch/: trajectory_planner.launch.py
ros2_ws/src/trajectory_planner/src/: trajectory_generator_node.cpp  trajectory_planner_node.cpp
ros2_ws/src/utils/: CMakeLists.txt  package.xml
ros2_ws/src/utils/config/: utils.yaml
ros2_ws/src/utils/launch/: utils.launch.py
ros2_ws/src/utils/src/: utils_node.cpp
ros2_ws/src/utils/srv/: SaveMap.srv  SetMissionMode.srv
(+209 files in other folders)
