<?xml version="1.0"?>
<package format="3">
  <name>path_planner</name>
  <version>0.0.1</version>
  <description>A* voxel-grid path planner for the Autonomous Systems 2025 project.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
