<?xml version="1.0"?>
<package format="3">
  <name>simulation_bridge</name>
  <version>0.0.1</version>
  <description>Simulation bridge configuration and launch files for the Autonomous Systems 2025 project.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
